delete some old todos

--- a/finite.tex
+++ b/finite.tex
@@ -3,7 +3,7 @@
 \chapter{Finite spectra}\label{ChapterFiniteSpectra}
 
 
-\todo[inline]{Andy Senger correctly points out that ``stalkwise'' is the wrong word to use in all this (if we mean to be working in the Zariski topology, which surely we must).  The stalks are selected by maps from certain local rings; $E_\Gamma$ selects the formal neighborhood of the special point inside of this; and $K_\Gamma$ selects the special point itself.  Is ``fiberwise'' enough of a weasel word to get out of this?}
+\todo[inline]{Andy Senger correctly points out that ``stalkwise'' is the wrong word to use in all this (if we mean to be working in the Zariski topology, which surely we must).  The stalks are selected by maps from certain local rings; $E_\Gamma$ selects the formal neighborhood of the special point inside of this; and $K_\Gamma$ selects the special point itself.  Is ``fiberwise'' enough of a weasel word to get out of this?  In any case, make sure you clean up all instances of the word ``stalk''.}
 
 
 Our goal in this Case Study is to thoroughly examine one of the techniques from \Cref{UnorientedBordismChapter} that has not yet resurfaced: the idea that $H\F_2$--homology takes values in quasicoherent sheaves over some algebro-geometric object encoding the coaction of the dual Steenrod Hopf algebra.  We will find that this situation is quite generic: associated to mildly nice ring spectra $E$, we will construct a very rich algebro-geometric object $\context{E}$, called its context, such that $E$--homology sends spaces $X$ to sheaves $\context{E}(X)$ over $\context{E}$.  In still nicer situations, the difference between the $E_*$--module $E_*(X)$ and the sheaf $\context{E}(X)$ tracks exactly the analogue of the action of the dual Steenrod algebra, called the \textit{Hopf algebroid of stable $E$--homology cooperations}.  From this perspective, we will reinterpret Quillen's \Cref{QuillensTheorem} as giving a presentation \[\context{MUP} \xrightarrow{\simeq} \moduli{fg},\] where $\moduli{fg}$ is the \textit{moduli of formal groups}.  This indicates a program for studying periodic complex bordism, which we will spend the rest of this introduction outlining.
@@ -23,7 +23,7 @@ Given such a diagram where the diagonal arrow is flat, the functor \[R_0(X) := M
 
 \noindent In the course of proving this theorem, Landweber additionally devised a method to recognize flat maps.  Recall that a map $f\co Y \to X$ of schemes is flat exactly when for any closed subscheme $i\co A \to X$ with ideal sheaf $\mathcal I$ there is an exact sequence \[0 \to f^* \sheaf I \to f^* \sheaf O_X \to f^* i_* \sheaf O_A \to 0.\]  Landweber classified the closed subobjects of $\moduli{fg}$, thereby giving a precise list of conditions needed to check maps for flatness.
 
-This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing stalks\todo{Here's this ``stalks'' word again.}: the inclusion of a geometric point is flat only in highly degenerate cases.  We will see that this can be repaired: the inclusion of the formal completion of a subobject is flat in friendly situations, and so we naturally become interested in the infinitesimal deformation spaces of the geometric points $\Gamma$ on $\moduli{fg}$.  If we can analyze those, then Landweber's theorem will produce homology theories called \textit{Morava $E_\Gamma$--theories}.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover \textit{Morava $K_\Gamma$--theory}, a \emph{homology theory}, which plays the role\footnote{To be clear: $K_\Gamma(X)$ may not actually compute the literal stalk of $\context{MUP}(X)$ at $\Gamma$, since the homotopical operation of quotienting out the regular sequence is potentially sensitive to torsion sections of $\context{MUP}(X)$.} of computing the stalk\todo{``stalk'' again.} of $\context{MUP}(X)$ at $\Gamma$.\footnote{Incidentally, this program has no content when applied to $\context{H\F_2}$, as $\Spec \F_2$ is simply too small.}
+This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing stalks: the inclusion of a geometric point is flat only in highly degenerate cases.  We will see that this can be repaired: the inclusion of the formal completion of a subobject is flat in friendly situations, and so we naturally become interested in the infinitesimal deformation spaces of the geometric points $\Gamma$ on $\moduli{fg}$.  If we can analyze those, then Landweber's theorem will produce homology theories called \textit{Morava $E_\Gamma$--theories}.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover \textit{Morava $K_\Gamma$--theory}, a \emph{homology theory}, which plays the role\footnote{To be clear: $K_\Gamma(X)$ may not actually compute the literal stalk of $\context{MUP}(X)$ at $\Gamma$, since the homotopical operation of quotienting out the regular sequence is potentially sensitive to torsion sections of $\context{MUP}(X)$.} of computing the stalk of $\context{MUP}(X)$ at $\Gamma$.\footnote{Incidentally, this program has no content when applied to $\context{H\F_2}$, as $\Spec \F_2$ is simply too small.}
 
 We have thus assembled a task list:
 \begin{itemize}
@@ -33,12 +33,6 @@ We have thus assembled a task list:
 \end{itemize}
 These will occupy our attention for the first half of this Case Study.  In the second half, we will exploit these homology theories $E_\Gamma$ and $K_\Gamma$, as well as their connection to $\moduli{fg}$ and to $MU$, to make various structural statements about the category $\CatOf{Spectra}$.  These homology theories are especially well-suited to understanding the subcategory $\CatOf{Spectra}^{\fin}$ of finite spectra, and we will recount several important statements in that setting.  Together with these homology theories, these celebrated results (collectively called the nilpotence and periodicity theorems) form the basis of \textit{chromatic homotopy theory}.  In fact, our \emph{real} goal in this Case Study is to give an introduction to the chromatic perspective that remains in line with our algebro-geometrically heavy narrative.
 
-
-\todo{still need to talk about closed and open subschemes, their basic properties}
-
-\todo{Danny has been nervous lately about the LEFT yielding module spectra and ring spectra. It would be good to write out how LEFT applied to a sheaf of rings gives a ring spectrum.}
-
-\todo[inline]{Figure out where the label StructureOfMfgl is referenced and make sure it points appropriately to either this introduction or to MfgI:Height.}
 
 
 
@@ -884,6 +878,7 @@ I drew an approximation to this picture by hand in \texttt{other resources}.  I 
 
 \todo{The bottom of COCTALOS page 68 has a better interpretation of what picking a formal group law lifting a flat map to $\moduli{fg}$ has to do with anything.  It probably belongs in this Lecture.}
 \todo{Much of this section is written graded-ly.  I guess we still haven't decided whether this is the right presentation.}
+\todo{Danny has been nervous lately about the LEFT yielding module spectra and ring spectra. It would be good to write out how LEFT applied to a sheaf of rings gives a ring spectrum.}
 
 
 With our analysis of $\moduli{fg}$ complete, our first goal in this Lecture is to finish the program sketched in the introduction to this Case Study by manufacturing those interesting homology theories connected to the functor $\context{MU}(-)$.  We begin by rephrasing our main tool, \Cref{LandwebersStackyTheorem}, in terms of algebraic conditions.
