note about hirzebruch genera

--- a/sigma.tex
+++ b/sigma.tex
@@ -1072,7 +1072,7 @@ This is exactly Witten's formula for his genus, as applied to complex manifolds 
 
 \todo[inline]{A different approach to this is to work through the $p \ne 2$ case, since you can totally, correctly work it out and see the $\Sigma$--structure relation get imposed. That's kind of attractive.  Too bad you had this thought after the class was complete.  ------  We might also try to understand the extension problem of orientations across $MU \to MSO$ for spectra which are local away from $2$.  It seems like some juggling of the complex-conjugation idempotents could give you access to $BSO$ information in terms of $BU$, which would be satisfying.  Compare with Neil's response at \texttt{http://mathoverflow.net/questions/123958/a-formal-group-law-over-oriented-bordism}. Hood also points out that the usual ``$\operatorname{tanh}^{-1}$'' equation for the $L$--genus has an expansion in terms of the usual logarithm: it's an averaging between the positive and negative logarithmic series.}
 
-\todo[inline]{Hood also points out that the mysterious series $x / (1 - e^{-x})$ occurs as $\exp_{\G_a} / \exp_{\G_m}$.}
+\todo[inline]{Hood also points out that the mysterious series $x / (1 - e^{-x})$ occurs as $\exp_{\G_a} / \exp_{\G_m}$.  Also, Section 3 of Ando--Hopkins--Rezk sets up a bunch of the rational Hirzebruch genera stuff in a way that extends to $MO\<8\>$.}
 
 
 
