clean up Section 3.6

--- a/mo.tex
+++ b/mo.tex
@@ -62,7 +62,7 @@ B\GL_1 S^{n-1} \arrow[equal]{r} \arrow{d} & B\GL_1 S^{n-1} \times * \arrow["\ope
 BO(n) \arrow[equal]{r} & BO(n) \times * \arrow["\operatorname{id} \times \text{triv}"]{r} & BO(n) \times BO(1) \arrow["\oplus"]{r} & BO(n+1).
 \end{tikzcd}
 \end{center}
-\begin{corollary}
+\begin{corollary}\label{DefnRealJHomomorphism}
 The operations of block--sum and topological join imbue the colimiting spaces $BO$ and $B\GL_1 \S$ with the structure of $H$--groups\todo{Should you justify ``group'' rather than ``space''?}.  Moreover, the colimiting map \[J_{\R}\co BO \to B\GL_1 \S,\] called the \textit{stable $J$--homomorphism}, is a morphism of $H$--groups. \qed
 \end{corollary}
 \noindent Finally, we can ask about the compatibility of Thom constructions with all of this.  In order to properly phrase the question, we need a version of the construction which operates on stable spherical bundles, i.e., whose source is the slice category over $B\GL_1 \S$.  By calculating\todo{Does this calculation need justification?} \[T_{n+1}(\xi \ast \text{triv}) \simeq \Susp T_n(\xi),\] we are inspired to make the following definition:
