couple the Mfg picture to the text with a reference

--- a/finite.tex
+++ b/finite.tex
@@ -825,7 +825,7 @@ Our calculation $H^1(\G_\phi; \G_a) = 0$ shows that the automorphisms $\alpha\co
 We also see that our analysis fails wildly for the case $\Gamma = \G_a$.  The differential calculation in \Cref{CalculationOfLTTangentSpace} is meant to give us an upper bound on the dimensions of $H^1(\Gamma; \G_a)$ and $H^2(\Gamma; \G_a)$, but this family of differentials is zero in the additive case.  Accordingly, both of these vector spaces are infinite dimensional, completely prohibiting us from making any further assessment.
 \end{remark}
 
-Having accomplished all our major goals, we close our algebraic analysis of $\moduli{fg}$ with a diagram summarizing our results.
+Having accomplished all our major goals, we close our algebraic analysis of $\moduli{fg}$ with \Cref{MfgPicture}, a diagram summarizing our results.
 \begin{sidewaysfigure}
 \centering
 PICTURE GOES HERE.
@@ -844,7 +844,7 @@ Include a legend: dots for geometric points, fuzz for deformation neighborhoods,
 
 \vspace{\baselineskip}
 I drew an approximation to this picture by hand in \texttt{other resources}.  I didn't get everything right, but I'd definitely like to use it as a template.
-\caption{Portrait of $\moduli{fg} \times \Spec \Z_{(p)}$.}
+\caption{Portrait of $\moduli{fg} \times \Spec \Z_{(p)}$.}\label{MfgPicture}
 \end{sidewaysfigure}
 
 
