sneak in an example of an HZ-acyclic spectrum

--- a/quillen.tex
+++ b/quillen.tex
@@ -165,7 +165,7 @@ Such a tuple $+_\phi$ is called a \textit{formal group law}, and it is the concr
 
 Let's now consider two examples of $E$ which are complex-orientable and describe these invariants for them.
 
-\begin{example}
+\begin{example}\label{HZGivesGa}
 There is an isomorphism $\CP^\infty_{H\Z P} \cong \G_a$.  This follows from reasoning identical to that given in \Cref{RPinftyExampleForReal}.
 \end{example}
 
