save hood’s HFp macro for later use

--- a/main.tex
+++ b/main.tex
@@ -69,6 +69,7 @@
 
 \todo[inline]{Jon suggested that we include backreferences from the bibliography, using the package \texttt{backref}.  More information on getting this to work well is at this tex.se url: http://tex.stackexchange.com/questions/54541/precise-back-reference-target-with-hyperref-and-backref .}
 
+\todo[inline]{Use Hood's HFp macro where appropriate.  (Maybe modify it also to do HF2 appropriately.)}
 
 
 
