--- a/preamble.tex
+++ b/preamble.tex
@@ -253,3 +253,9 @@
     \ifx\footnote\nextToken\textsuperscript{,}%
     \else\ifx\footnotemark\nextToken\textsuperscript{,}\fi%
     \fi}
+
+% from hood chatham: an \HFp macro that deals with subsequent subscripts intelligently
+
+\makeatletter
+\protected\def\HFp{H\mathbb{F}_p\@ifnextchar_{{}}{}}
+\makeatother
