--- a/mo.tex
+++ b/mo.tex
@@ -300,7 +300,7 @@ In either case, this induces a Hopf algebra diagonal \[H\F_2^* \RP^\infty \otime
 H\F_2^* \RP^\infty \arrow[leftarrow]{r}{\begin{pmatrix} \epsilon \otimes \id \\ \id \otimes \epsilon \end{pmatrix}} & H\F_2^* \RP^\infty \otimes H\F_2^* \RP^\infty \arrow[leftarrow]{r}{\Delta} &\arrow[ll,bend left=15,"\id"]  H\F_2^* \RP^\infty.
 \end{tikzcd}
 \end{center}
-and hence it takes the form \[\Delta(x) = x_1 + x_2.\]  Noticing that this is exactly the diagonal map in \Cref{InformalAdditiveGroupExample}, we tentatively identify ``$\RP^\infty_{H\F_2}$'' with the additive group.  This is extremely suggestive but does not take into account the fact that $\RP^\infty$ is an infinite complex, so we have not yet allowed ourselves to write ``$\RP^\infty_{H\F_2}$''.  In light of the rest of the material discussed in this section, we have left open a very particular point: it is not clear if we should use the name ``$\mathbb G_a$'' or ``$\G_a$''.  We will straighten this out tomorrow.
+and hence it takes the form \[\Delta(x) = x_1 + x_2.\]  Noticing that this is exactly the diagonal map in \Cref{InformalAdditiveGroupExample}, we tentatively identify ``$\RP^\infty_{H\F_2}$'' with the additive group.  This is extremely suggestive but does not take into account the fact that $\RP^\infty$ is an infinite complex, so we have not yet allowed ourselves to write ``$\RP^\infty_{H\F_2}$''.  In light of the rest of the material discussed in this section, we have left open a very particular point: it is not clear if we should use the name ``$\mathbb G_a$'' or ``$\G_a$''.  We will straighten this out in the subsequent Lecture.
 \end{example}
 
 
@@ -312,7 +312,7 @@ and hence it takes the form \[\Delta(x) = x_1 + x_2.\]  Noticing that this is ex
 
 \section{The Steenrod algebra}\label{TheSteenrodAlgebraSection}
 
-We left off in the previous section with an ominous finiteness condition in \Cref{HF2SchemeForFiniteCplx}, and we produced a pair of reasonable guesses as to what ``$\RP^\infty_{H\F_2}$'' could mean in \Cref{RPExampleFaulty}.  We will decide which of the two guesses is reasonable by rigidifying the target category so as to incorporate the following extra structures:
+We left off in the previous Lecture with an ominous finiteness condition in \Cref{HF2SchemeForFiniteCplx}, and we produced a pair of reasonable guesses as to what ``$\RP^\infty_{H\F_2}$'' could mean in \Cref{RPExampleFaulty}.  We will decide which of the two guesses is reasonable by rigidifying the target category so as to incorporate the following extra structures:
 \begin{enumerate}
 \item Cohomology rings are \emph{graded}, and maps of spaces respect this grading.
 \item Cohomology rings receive an action of the Steenrod algebra, and maps of spaces respect this action.
