--- a/conventions.tex
+++ b/conventions.tex
@@ -5,4 +5,5 @@ Throughout this book, we use the following conventions:
 \begin{itemize}
 \item $\CatOf{C}(X, Y)$ will denote the mapping object of arrows $X \to Y$ in a category $\CatOf{C}$.  If $\CatOf{C}$ is an $\infty$--category, this will often be interpreted as a mapping \emph{space}.  If $\CatOf{C}$ has a self-enrichment, we will often write $\underline{\CatOf{C}}(X, Y)$ (or, e.g., $\InternalAut(X)$) to distinguish the internal mapping object from $\CatOf{C}(X, Y)$ the classical mapping set.
 \item Following Lurie, for an object $X \in \CatOf C$ we will write $\CatOf C_{/X}$ for the slice category of objects \emph{over} $X$ and $\CatOf C_{X/}$ for the slice category of objects \emph{under} $X$.
+\item For a ring spectrum $E$, we will write $E_* = \pi_* E$ for its coefficient ring, $E^* = \pi_{-*} E$ for its coefficient ring with the opposite grading, and $E_0 = E^0 = \pi_0 E$ for the $0${\th} degree component of its coefficient ring.  In particular, this allows us to make sense of expressions like ``$E^*\ps{x}$'', which we interpret as \[E^*\ps{x} = (E^*)\ps{x} = (\pi_{-*} E)\ps{x}.\]
 \end{itemize}
