--- a/main.bib
+++ b/main.bib
@@ -55,6 +55,12 @@ MRREVIEWER = {P. S. Landweber},
        URL = {http://dx.doi.org/10.1215/S0012-7094-95-07911-3},
 }
 
+@ARTICLE{AHR,
+  author = {Ando, Matthew, and Hopkins, Michael J. and Rezk, Charles},
+  title = {Multiplicative orientations of $KO$--theory and the spectrum of topological modular forms},
+  note = {\url{http://www.math.illinois.edu/~mando/papers/koandtmf.pdf}, Accessed: 2016-11-16}
+}
+
 @article {AHSHinfty,
     AUTHOR = {Ando, Matthew and Hopkins, Michael J. and Strickland, Neil P.},
      TITLE = {The sigma orientation is an {$H_\infty$} map},
