move the formal varieties detection theorem into 2.1

--- a/main.tex
+++ b/main.tex
@@ -150,21 +150,6 @@ when describing Quillen's model, he makes a lot of use of Gysin maps and Thom / 
 
 
 
-\begin{theorem}\label{DetectingFormalVarieties}
-\todo{I think this theorem is motivated by Artin--Mazur formal groups, and the Crystals notes use it to extract a formal group from a Dieudonn\'e module.  Some motivation could go here.}Let $A$ be a Noetherian ring and $G: \CatOf{AdicAlgebras}_A \to \CatOf{AbelianGroups}$ be a functor such that
-\begin{enumerate}
-\item $G(A) = 0$.
-\item $G$ takes surjective maps to surjective maps.
-\item There is a finite, free $A$--module $M$ and a functorial isomorphism \[I \otimes_A M \to G(B) \to G(B')\] whenever $I$ belongs to a square-zero extension of adic $A$--algebras \[I \to B \to B'.\]
-\end{enumerate}
-Then, $G \cong \A^n$ as a functor to sets, where $n = \dim M$.
-\end{theorem}
-\begin{proof}
-This is 9.6.4 in the Crystals notes.
-\end{proof}
-
-
-
 \begin{lemma}[{\cite[Proposition 4.6]{StricklandFSFG}}]
 A functor $X\co \CatOf{Algebras} \to \CatOf{Sets}$ is a formal scheme exactly when
 \begin{enumerate}
@@ -208,11 +193,11 @@ $MUP$ happens to be the Thom spectrum of $BU \times \Z$.
 
 ---Day 5
 
-+ Honda’s theorem about $\zeta$--functions as manufacturing integral genera.
++ Honda's theorem about $\zeta$--functions as manufacturing integral genera.
 + Definition of forms of a module, map to Galois cohomology
 + Computation of the Galois cohomology for: $H\F_p$, $MU/p$, $KU/p$
 + Computation of the Galois cohomology for $\G_m$, explicit description of the invariant via the $\zeta$--function
-+ Morava’s sheaf over $L_1(\Z_p^{nr})$, Gamma-equivariance and transitivity, Conner—Floyd
++ Morava's sheaf over $L_1(\Z_p^{nr})$, Gamma-equivariance and transitivity, Conner—Floyd
 + Identification of $L_1 / \Gamma$ with $\moduli{fg}^{\le 1}$, connection to LEFT.
 
 ---Future topics
