attempt at writing the MO cooperations remark in Lecture 1.5

--- a/mo.tex
+++ b/mo.tex
@@ -772,11 +772,17 @@ Referring to \Cref{HurewiczImageOnZeroLine}, we find that the Hurewicz map induc
 \end{proof}
 
 \begin{remark}
-Just using that $\pi_* MO$ is connective and $\pi_0 MO = \F_2$, we can produce a ring spectrum map $MO \to H\F_2$.  What we've learned is that this map has a splitting: $MO$ is also an $H\F_2$--algebra.
+Just using that $\pi_* MO$ is connective and $\pi_0 MO = \F_2$, we can produce a ring spectrum map $MO \to H\F_2$.  What we have learned is that this map has a splitting: $MO$ is also an $H\F_2$--algebra.
 \end{remark}
 
 \begin{remark}
-\todo[inline]{You should mention the stable cooperations $\Spec MO_* MO$.  Rather than coming with a specified logarithm, it's an isomorphism between any pair of additive formal groups --- or, I suppose, a pair of logarithms.}
+\todo{Make sure you got this right.}
+We are also in a position to understand the stable cooperations $MO_* MO$.  We may rewrite this as
+\begin{align*}
+MO_* MO & = \pi_* MO \sm MO = \pi_* MO \sm_{H\F_2} (H\F_2 \sm MO) \\
+& \Leftarrow \Tor^{\F_2}_{*, *}(MO_*, H\F_2{}_* MO) = MO_* \otimes_{\F_2} H\F_2{}_* MO.
+\end{align*}
+Hence, a point in $\Spec MO_* MO$ consists of a pair of points in $\Spec MO_*$ and $\Spec H\F_2{}_* MO$, which we have already identified individually as formal group laws with vanishing $2$--series and formal group laws with logarithms respectively.  This description can be amplified to capture all of the structure maps: a formal group law with vanishing $2$--series admits a logarithm, which indicates how the composition and conjugation maps of \Cref{FHGivesComodules} behave.
 \end{remark}
 
 
