--- a/quillen.tex
+++ b/quillen.tex
@@ -233,6 +233,8 @@ Consider the formal group law $x_1(t_1) +_{\G_m} x_2(t_2) = t_1 + t_2 - t_1 t_2$
 
 \section{Divisors on formal curves}\label{CurveDivisorsSection}
 
+\todo{I think this section is a little short. Maybe we could expand the proof of the comparison between Cartier and Weil divisors at the end? Or we would include a proof of the universality of the divisor scheme?  Something to give this a little more meat, anyway.}
+
 We continue to develop vocabulary and accompanying machinery used to give algebro-geometric reinterpretations of the results in the introduction to this Case Study.  In the previous section we deployed the language of formal schemes to recast \Cref{CPinftyNiceCalculation} in geometric terms, and we now turn towards reencoding \Cref{ThomIsomOverC}.  In \Cref{DefnQCohSheaves} and \Cref{CorrespondenceQCohAndModules} we discussed a general correspondence between $R$--modules and quasicoherent sheaves over $\Spec R$, and the isomorphism of $1$--dimensional $E_* X$--modules appearing in \Cref{ThomIsomOverC} moves us to study sheaves over $X_E$ which are $1$--dimensional --- i.e., line bundles.  In fact, for the purposes of \Cref{ThomIsomOverC}, we will find that it suffices to understand the basics of the geometric theory of line bundles \emph{just over formal curves}.  This is our goal in this Lecture, and we leave the applications to algebraic topology aside for later.  For the rest of this section we fix the following three pieces of data: a base formal scheme $S$, a formal curve $C$ over $S$, and a distinguished point $\zeta\co S \to C$ on $C$.
 
 To begin, we will be interested in a very particular sort of line bundle over $C$: for any function $f$ on $C$ which is not a zero-divisor, the subsheaf $\sheaf I_f = f \cdot \sheaf O_C$ of functions on $C$ which are divisible by $f$ form a $1$--dimensional $\sheaf O_C$--submodule of the ring of functions $\sheaf O_C$ itself --- i.e., a line bundle on $C$.  By interpreting $\sheaf I_f$ as an ideal sheaf, this gives rise to a second interpretation of this data in terms of a closed subscheme \[\Spec \sheaf O_C / f \subseteq C,\] which we will refer to as the \textit{divisor} associated to $\sheaf I_f$.  In general these can be somewhat pathological, so we specialize further to an extremely nice situation:
