Added a question about "CdEqualsDd"
The spectrum described there is not (?) the original one in the HopkinsSmith paper.

--- a/finite.tex
+++ b/finite.tex
@@ -1081,6 +1081,7 @@ BP_* M_{|v_d| i_d}(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow{r}{v} \
 \end{tikzcd}
 \end{center}
 These maps are guaranteed by very careful study of Adams spectral sequences.
+\todo{This spectrum you've described is the one from section 5 of Nilpotence II paper as an example of a spectrum with few self maps, right?  Hopkins and Smith construct a (possibly?) different spectrum $X_n$ with $v_n$ self maps in section 4 -- or at least assert their existence anyway (theorem 4.11).  I don't know whether it is easy to see that the generalized Moore spectra you've described have $v_n$ self maps without already knowing the result in the statement of this theorem.}
 \end{proof}
 
 They therefore conclude the strongest possible positive response to Ravenel's conjectures.  Not only can we continue the sequence \[\S, \; \S/p, \; \S/(p, v), \; \ldots,\] but in fact \emph{any} finite spectrum admits an (essentially unique) interesting periodic self-map.  This is maybe the most remarkable of the statements: although Nishida's theorem initially led us to think of periodic self-maps as rare, they are in fact ubiquitous.  Additionally, we learned that the shift\footnote{This is sometimes referred to as the ``wavelength'' in the chromatic analogy.} of this self-map is determined by the first nonvanishing $K(d)$--homology, giving an effective detection tool.  Finally, all such periodicity shifts arise: for any $d$, there is a spectrum admitting a $v_d$--self--map but not a $v_{d-1}$--self--map.
