scaffolding for re-ordering Lecture 2.4

--- a/mo.tex
+++ b/mo.tex
@@ -656,7 +656,7 @@ At the other extreme, we can pick the extremely nondegenerate case $X = \S$, whe
 
 
 
-\section{The unoriented bordism ring}
+\section{The unoriented bordism ring}\label{PiStarMOSection}
 
 Our goal in this section is to use our results so far to make a calculation of $\pi_* MO$, the unoriented bordism ring.  Our approach is the same as in the examples at the end of the previous section: we will want to use the Adams spectral sequence of signature \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); H\F_2P_0(MO)\widetilde{\:}) \Rightarrow \pi_* MO,\] which requires understanding $H\F_2P_0(MO)$ as a comodule for the dual Steenrod algebra.
 
